<resources>
    <string name="app_name">AndroidPlus</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="registering">registering…</string>
    <string name="login">login</string>
    <string name="logining">logining…</string>
    <string name="error_user_name_empty">Username empty</string>
    <string name="error_user_name">Invalid user name</string>
    <string name="error_password_empty">Password empty</string>
    <string name="error_password">Invalid password. At least six characters or digits.</string>
    <string name="login_success">login success</string>
    <string name="login_failed">login failed</string>
    <string name="user_name_password_not_match">username password not match</string>
    <string name="user_name_does_not_exist">username does not exist</string>
    <string name="register_success">register success</string>
    <string name="register_failed">register failed</string>
    <string name="user_name_taken">username taken</string>
    <string name="error_confirm_password">not equal password</string>
    <string name="slogan">use heart to create beautiful world</string>
    <string name="add_question">add question</string>
    <string name="home">home</string>
    <string name="article">article</string>
    <string name="me">me</string>
</resources>
